Fine tune margins and borders/outlines to ensure alignment on scroll jump, further tweak layout

--- a/src/app.css
+++ b/src/app.css
@@ -164,7 +164,11 @@
   }
 
   .box-shadow {
-    box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 10px 10px 0 0 rgba(0, 0, 0, 0.3);
+  }
+
+  .shadow-border {
+    box-shadow: 0 0 0 1px rgb(0, 0, 0);
   }
 
   .faint-border {
